# Placeholder

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTROLS.md  LICENSE  PLAN.md  TODO.md
.claude/: settings.local.json
assets/config/: engine.json
assets/models/: cube.mtl
assets/shaders/: debug_line.vert  mesh.frag  mesh.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  wow_model.frag  wow_model.vert
cmake/toolchains/: windows-msvc-x64.cmake
engine/animation/: CMakeLists.txt
engine/animation/src/: animation.cpp
engine/audio/: CMakeLists.txt
engine/audio/src/: audio.cpp
engine/core/: CMakeLists.txt
engine/core/include/core/: allocators.h  config.h  console.h  file_io.h  file_watcher.h  job_system.h  logging.h
engine/core/src/: allocators.cpp  config.cpp  console.cpp  core.cpp  file_io.cpp  file_watcher.cpp  job_system.cpp  logging.cpp
engine/core/tests/: CMakeLists.txt  test_allocators.cpp  test_config.cpp  test_console.cpp  test_file_io.cpp  test_job_system.cpp
engine/editor/: CMakeLists.txt
engine/editor/include/editor/: debug_draw.h  editor.h  editor_console.h  editor_panels.h  icon_font.h  wow_scene.h
engine/editor/src/: debug_draw.cpp  editor.cpp  editor_console.cpp  editor_panels.cpp  wow_scene.cpp
engine/input/: CMakeLists.txt
engine/input/include/input/: camera.h  fly_camera.h  input_manager.h  input_types.h  orbit_camera.h
engine/input/src/: fly_camera.cpp  input.cpp  input_manager.cpp  orbit_camera.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/platform/: window.h
engine/platform/src/: platform.cpp  window.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/renderer/: forward_pipeline.h  framebuffer.h  material.h  mesh.h  mesh_loader.h  opengl_render_device.h  render_device.h  render_state.h  render_types.h  shader_manager.h  shader_preprocessor.h  shader_program.h  skybox.h  texture.h  texture_loader.h  uniform_buffer.h  vertex_array.h
engine/renderer/src/: forward_pipeline.cpp  framebuffer.cpp  material.cpp  mesh.cpp  mesh_loader.cpp  opengl_render_device.cpp  render_state.cpp  renderer.cpp  shader_manager.cpp  shader_preprocessor.cpp  shader_program.cpp  skybox.cpp  texture.cpp  texture_loader.cpp  uniform_buffer.cpp  vertex_array.cpp
engine/resources/: CMakeLists.txt
engine/resources/include/resources/: resource_handle.h  resource_pool.h
engine/resources/src/: resources.cpp
engine/resources/tests/: CMakeLists.txt  test_resource_pool.cpp
engine/wowlib/: CMakeLists.txt
engine/wowlib/include/wowlib/: blp_image.h  blte_reader.h  build_cache.h  casc_local.h  casc_remote.h  casc_source.h  cdn_config.h  cdn_resolver.h  data_buffer.h  db2_reader.h  jenkins96.h  m2_loader.h  m2_types.h  salsa20.h  tact_keys.h  wmo_loader.h  wmo_types.h
engine/wowlib/src/: blp_image.cpp  blte_reader.cpp  build_cache.cpp  casc_local.cpp  casc_remote.cpp  casc_source.cpp  cdn_config.cpp  cdn_resolver.cpp  data_buffer.cpp  db2_reader.cpp  jenkins96.cpp  m2_loader.cpp  salsa20.cpp  tact_keys.cpp  wmo_loader.cpp  wowlib.cpp
game/: CMakeLists.txt
game/src/: main.cpp
scripts/: build.bat  build.ps1  clean.bat  configure.bat  run.bat  setup_msvc.bat
tests/integration/: CMakeLists.txt  placeholder_integration.cpp
tests/render/: CMakeLists.txt  render_test_scaffold.cpp
tools/src/: gen_test_texture.cpp
viewer/: CMakeLists.txt
viewer/src/: main.cpp
